--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,8 +5,9 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "dev": "nodemon",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node dist/src/index.js",
+        "build": "tsc",
+        "dev": "nodemon"
     },
     "nodemonConfig": {
         "watch": [
@@ -21,7 +22,7 @@
         "semi": true,
         "singleQuote": false
     },
-    "author": "",
+    "author": "samkaj",
     "license": "ISC",
     "devDependencies": {
         "@types/node": "^20.8.7",
